# SmileCareMedicine-Playwright-Python-BDD-Framework

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  Makefile  PROJECT_HISTORY.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.json
.claude/agents/: browser-runner.md  bug-house.md  coverage-metrics.md  generator.md  healer.md  manual-test-case-writer.md  planner.md
.claude/commands/: test-module.md
.github/workflows/: e2e.yml
bug_reports/: README.md  bug_house.xlsx
config/: settings.py
config/environments/: local.yaml  production.yaml  staging.yaml
config/locators/: login.yaml
docs/: auth-coverage.md  auth-test-plan.md  test-strategy.md
src/api/: pocketbase_client.py
src/core/: ai_healer.py  base_page.py  browser_factory.py  healing_locator.py
src/data/: encoders.py  factories.py  test_data.py
src/pages/: login_page.py
src/utils/: assertions.py  bug_logger.py  logger.py  network_mocks.py  waits.py
test_cases/: auth.md
tests/: conftest.py
tests/features/auth/: login.feature
tests/step_defs/: test_auth.py
