[project]
name = "smilecare-automation"
version = "0.1.0"
description = "Enterprise Playwright + Python (pytest-bdd) E2E framework for the SmileCareMedicine customer-facing site"
requires-python = ">=3.11"
readme = "README.md"

[tool.pytest.ini_options]
# Mirrors pytest.ini; kept here for tools that read pyproject.
minversion = "8.0"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
